# clipforge

./: .gitignore  PRD.md  PROGRESS.md  README.md  RECORDING_FEATURES_SUMMARY.md  TRANSCRIPTION_SETUP.md  VIDEO_PLAYBACK_DEBUG_PROMPT.md  WEBCAM_LIMITATION.md  env.template  index.html  package-lock.json  package.json  tasks.md  vite.config.js  vite.config.ts
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  recording.rs  transcription.rs  video.rs
src/components/: DraggableMediaItem.tsx  ExportDialog.tsx  MediaLibrary.tsx  PiPOverlay.tsx  RecordPanel.tsx  Timeline.tsx  TopBar.tsx  TranscriptDialog.tsx  TrimConfirmationDialog.tsx  VideoPreview.tsx  WebcamPreview.tsx
src/hooks/: useWebcam.ts
src/store/: useAppStore.ts
src/stores/: appStore.ts
src/types/: index.ts
src/utils/: recordingCompositor.ts
